fix resizeEntry not shrinking text size if operation is too long

--- a/style.css
+++ b/style.css
@@ -71,11 +71,9 @@ button {
     display: grid;
     place-self: center;
 /*     grid-template-rows: 4fr 4fr 8fr 1fr 1fr; */
-    grid-template-rows: 4fr 1fr 1fr 10fr 1fr 1fr;
+    grid-template-rows: 6fr 10fr 1fr 1fr;
     grid-template-columns: 1fr;
     grid-template-areas: "operationBox"
-                        "spacer"
-                        "spacer"
                         "entryBox"
                         "mainColorBand"
                         "subColorBand";
